# cloud-storage-for-firebase-utils

./: .env  .flake8  .gitignore  LICENSE  README.md  lint.sh  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint_and_test.yaml  publish.yaml
doc/: DEV_SETUP.md
docs/: DEV_SETUP.md
script/: pyright_result_formatter.py  pythonpath_maintainer.py  setup.sh
scripts/: json_formatter.py
src/csfutils/: __init__.py  _blob_arg.py  _client.py  _const.py  _utils.py  url_type.py
src/csfutils/blob/: _access_token.py  _path.py  _upload.py
tests/: test_access_token.py  test_estimate_download_url.py  test_get_download_url.py  test_gs_path.py  test_ref_from_url.py  test_upload.py  testconfig.py
typings/fire/: __init__.pyi  __main__.pyi  completion.pyi  completion_test.pyi  core.pyi  core_test.pyi  custom_descriptions.pyi  custom_descriptions_test.pyi  decorators.pyi  decorators_test.pyi  docstrings.pyi  docstrings_fuzz_test.pyi  docstrings_test.pyi  fire_import_test.pyi  fire_test.pyi  formatting.pyi  formatting_test.pyi  formatting_windows.pyi  helptext.pyi  helptext_test.pyi  inspectutils.pyi  inspectutils_test.pyi  interact.pyi  interact_test.pyi  main_test.pyi  parser.pyi  parser_fuzz_test.pyi  parser_test.pyi  test_components.pyi  test_components_bin.pyi  test_components_py3.pyi  test_components_test.pyi  testutils.pyi  testutils_test.pyi  trace.pyi  trace_test.pyi  value_types.pyi
typings/pytest/: __init__.pyi
typings/simple_chalk/: __init__.pyi
(+83 files in other folders)
